# SASRec.pytorch

./: .gitignore  CITATION.cff  README.md  Result_Norm.md  main.py  main_repeat.py  model.py  sasrec_repeat_emb.py  utils.py
latex/: README.md  arxiv.sty  main.bib  main.tex
ml-1m_default/: SASRec.epoch=1000.lr=0.001.layer=2.head=1.hidden=50.maxlen=200.pth  SASRec.epoch=601.lr=0.001.layer=2.head=1.hidden=50.maxlen=200.pth  SASRec.epoch=720.lr=0.001.layer=2.head=1.hidden=50.maxlen=200.pth  SASRec.epoch=860.lr=0.001.layer=2.head=1.hidden=50.maxlen=200.pth  args.txt
python/: CLAUDE.md  eval_ndcg.py  filters.py  main.py  model.py  print_results.py  run_eval.py  train_rl_filter.py  utils.py
python/data/: wikipedia.txt
rust/: Cargo.toml  README.md
rust/src/: main.rs  model.rs
